re #84 - fixing uploader on Firefox

--- a/resources/assets/scss/uploader.scss
+++ b/resources/assets/scss/uploader.scss
@@ -258,7 +258,8 @@ $k-upload-list-button-desktop-size: 23px !default;
   max-width: 0; /* 2 */
   padding: 0 0 0 15px;
   display: table-cell; /* 3 */
-  min-height: 42px;
+  height: 58px;
+  min-height: 58px;
   transition: all .8s ease-in-out;
 
   @media (min-width: $k-upload-querie) {
